# DiceDetection

./: .gitignore  CMakeLists.txt  KNearestOcr.cpp  KNearestOcr.h  README.md  SVMDice.cpp  SVMDice.h  d6dotdetection.cpp  dicedetection.cpp  dicedetection.hpp  displaynumbers.cpp  modeldata  modeldataSVM.canny.bak  modeldataSVM.nocanny.bak  trainmodel.cpp  trainmodelSVM.cpp  usemodel.cpp  usemodelSVM.cpp  usemodelSVMmulti.cpp
