set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ~/Documents/merderandom/opencvmumuse/FindOpenCV.cmake)
set(OpenCV_DIR /usr/local/share/OpenCV)
set(OpenCV_FOUND TRUE)
set(CMAKE_CXX_STANDARD 11)
cmake_minimum_required(VERSION 2.8)
project( DiceDetection )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( dicedetection dicedetection.cpp )
target_link_libraries( dicedetection ${OpenCV_LIBS} )
