set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ~/Documents/merderandom/opencvmumuse/FindOpenCV.cmake)
set(OpenCV_DIR /usr/local/share/OpenCV)
set(OpenCV_FOUND TRUE)
set(CMAKE_CXX_STANDARD 11)
cmake_minimum_required(VERSION 2.8)
project( DiceDetection )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_library(dicedetection dicedetection.cpp)
add_library(knearest KNearestOcr.cpp)
add_library(svmdice SVMDice.cpp)
add_executable( displaynumbers displaynumbers.cpp )
add_executable( trainmodel trainmodel.cpp )
add_executable( trainmodelsvm trainmodelSVM.cpp )
add_executable( usemodel usemodel.cpp )
add_executable( usemodelsvm usemodelSVM.cpp )
add_executable( usemodelsvmmulti usemodelSVMmulti.cpp )
target_link_libraries( displaynumbers ${OpenCV_LIBS} dicedetection )
target_link_libraries( trainmodel ${OpenCV_LIBS} dicedetection knearest)
target_link_libraries( trainmodelsvm ${OpenCV_LIBS} dicedetection svmdice)
target_link_libraries( usemodel ${OpenCV_LIBS} dicedetection knearest)
target_link_libraries( usemodelsvm ${OpenCV_LIBS} dicedetection svmdice)
target_link_libraries( usemodelsvmmulti ${OpenCV_LIBS} dicedetection svmdice)
